[package]
name = "weo"
version = "0.1.0"
description = "A simple WAN emulator in Rust"
authors = ["GengTeng <me@gteng.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.4.12"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
http = "0.1"
httparse = "1.3.4"
mime = "0.3.14"
structopt = "0.3.2"
regex = "1.3.1"
lazy_static = "1.4.0"
futures-preview = "0.3.0-alpha.18"
tokio = "0.2.0-alpha.5"
tokio-net = { version = "0.2.0-alpha.5", features = [ "process" ]}
