[package]
name = "weo"
version = "0.1.0"
description = "A simple WAN emulator in Rust"
authors = ["GengTeng <me@gteng.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "0.5.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "0.4.11"
http = "0.2.1"
httparse = "1.3.4"
mime = "0.3.16"
structopt = "0.3.14"
regex = "1.3.9"
lazy_static = "1.4.0"
futures = "0.3"
tokio = { version = "0.2.21", features = [ "full" ]}
tokio-util = { version = "0.3.1", features = [ "codec" ]}
