[package]
name = "taco"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19", features = ["full"]}
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
axum = "0.5"
tower-http = {version = "0.3", features = ["fs"]}
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
regex = "1.5"
clap = { version = "3.2", features = ["derive"] }
once_cell = "1.12"